# octet-verify

./: .gitignore  CHANGELOG.md  Cargo.toml  INTEGRATION.md  NOTICE  README.md  SECURITY.md  VERIFICATION-SPEC.md  build.rs
.github/workflows/: ci.yml
proto/octet/attest/: continuous.proto
proto/octet/proof/: proof.proto
src/: appattest_layer.rs  backend.rs  crypto.rs  keys.rs  lib.rs  replay.rs  verify.rs  wire.rs
test-vectors/backend/: README.md  refetch-first.json  refetch-second.json  success.json  tampered-bytes.json
test-vectors/golden/: README.md
test-vectors/golden/0.0.3-alpha/: android-onearth.json  android-onearth.pubkey  ios-onearth.json  ios-onearth.pubkey
test-vectors/golden/1.0.0/: android-onearth.json  android-onearth.pubkey  ios-onearth.json  ios-onearth.pubkey
tests/: backend.rs  golden.rs
